--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 <div class="container" (panmove)="onPanMove($event)" (panend)="onPanEnd($event)">
-  <div #person_1 class="person">
+  <div class="title">
+    <div class="title1">Triolingo</div>
+    <div class="title2">Learn a third language</div>
+  </div>
+  <div #person_1 class="person-right">
       <svg viewBox="0 0 100 120" height="240" width="200">
           <path d="M58.918 76.63l1.208-2.097c.63-1.094 1.51-2.026 2.567-2.718l1.86-1.22c.442-.29 1.04-.112 1.25.372.18.41.093.886-.22 1.205l-1.65 1.686 8.886-2.546c.38-.117.778.126.846.52l.046.262c.055.31-.118.616-.41.73l-5.216 1.673 6.257-1.093c.386-.092.766.174.81.57l.023.195c.037.33-.178.64-.503.717l-6.476 1.33 5.37-.11c.422-.018.753.36.68.775l-.014.084c-.05.286-.28.505-.568.543l-5.59.72 3.432.002c.488 0 .808.51.596.95-.1.208-.304.35-.535.37L59.07 80.71l-.152-4.08" fill="#f79467"></path>
           <path d="M78.19 31.872s1.237 7.694 4.008 12.015c.52.81.243 1.917-.56 2.435-3.128 2.022-11.934 5.857-23.18 1.466-.744-.29-1.2-1.065-1.108-1.88.23-2.08 2.035-6.163 4.688-9.826l16.152-4.21" fill="#f25b36"></path>
@@ -28,7 +32,7 @@
           <path d="M79.64 78.56l4.567 3.123c.107.073.253.045.326-.06.073-.108.045-.254-.06-.327l-4.568-3.123c-.107-.073-.253-.045-.326.06-.075.108-.047.254.06.327" fill="#f68b5c"></path>
       </svg>
   </div>
-  <div #person_2 class="person" style="transform: rotate(20deg)">
+  <div #person_2 class="person-left" style="transform: rotate(20deg)">
       <svg viewBox="0 0 100 120" height="240" width="200">
           <defs><clipPath id="a"><path d="M5537.66 2888.01l141.95-5.38s-3.12-61.44-72.86-61.44c-69.35 0-69.09 66.82-69.09 66.82"></path></clipPath></defs>
           <path d="M39.888 39.78c.335 1.483 1.808 2.414 3.29 2.08 1.483-.336 2.413-1.81 2.08-3.292-.336-1.483-1.81-2.413-3.292-2.078-1.483.335-2.413 1.808-2.078 3.29" fill="#8e3c3a"></path>
@@ -54,7 +58,7 @@
           <path d="M18.517 81.375h3.136l2.035-11.86c.02-.124.14-.208.265-.187.125.022.21.14.187.266l-2.067 12.05c-.02.11-.115.19-.227.19h-3.33c-.126 0-.23-.103-.23-.23s.104-.23.23-.23" fill="#162d50"></path>
       </svg>
   </div>
-  <div #person_3 class="person" style="transform: rotate(40deg)">
+  <div #person_3 class="person-right" style="transform: rotate(40deg)">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 120" height="240" width="200">
       <defs><clipPath id="a"><path d="M3498.05 2734.47l-159.3-1.82s3.29-68.84 77.04-68.84c73.32 0 82.26 70.66 82.26 70.66"></path></clipPath></defs>
       <path d="M81.136 39.23s-.675 4.144.416 5.235c2.08 2.08 8.47 3.05 5.098 11.953H57.253s-1.455-3.545 1.83-5.606c0 0 1.142-.798.44-3.202-.7-2.403 1.047-4.11 3.19-6.678l4.218-6.853 14.206 5.15" fill="#a40"></path>
@@ -89,15 +93,16 @@
         <path d="M72.12 82.846l-13.966-10.11s-.398-3.637-1.332-4.787c-1.255-1.544-4.213-3.685-4.876-3.577-.664.108-.77.44-.65 1.075.482.91 1.282 1.655 2.537 2.226 0 0-.42.514-2.267-.43-1.848-.942-6.465-3.918-6.88-3.582-.256.207-.595.63-.057 1.185-.88-.292-1.053-.118-1.236.325-.136.33 0 .775.64 1.113-.453.094-.53.318-.445.8.1.564 1.248 1.076 1.52 1.402-.555-.01-.4.62-.278.76 1.195 1.36 4.692 4.473 6.616 5.298 1.924.824 4.105 1.392 4.105 1.392L68.22 88.932s1.99-1.214 2.835-2.87c.843-1.654 1.064-3.216 1.064-3.216" fill="#f79467"></path>
     </svg>
   </div>
-  <div class="blob">
+  <div #blob class="blob">
     <svg width="200" height="240" viewBox="0 0 100 120">
-      <path #bubble d="M 53.623408,41.586029 C 47.75092,46.616849 44.763419,42.445 44.763419,42.445 44.763419,42.445 44.403966,47.987178 38.571906,51.958007 32.739846,55.928836 17.256116,55.562 12.595934,50.935871 7.935752399999998,46.309742 7.892000000000003,41.061909 7.892000000000003,41.061909 7.892000000000003,41.061909 7.396352300000004,38.202196 7.292000000000002,36.667135 7.187647699999999,35.132074 7.291699100000002,31.871054 7.291699100000002,31.871054 7.291699100000002,31.871054 7.469821799999998,27.067216 13.588895,22.962 19.707968,18.856784 36.789652,18.952925 41.962439,24.559061 47.135226,30.165197 45.162,37.748282 45.162,37.748282 45.162,37.748282 47.535567,42.803005 53.623408,41.586029 Z" style="fill: rgb(255, 255, 255);"></path>
+      <path #bubble d="m 65.12929,40.738971 c -5.872488,5.03082 -8.987585,0.274199 -8.987585,0.274199 0,0 -1.04613,6.509129 -6.87819,10.479958 C 43.431455,55.463957 17.256116,55.562 12.595934,50.935871 7.9357524,46.309742 7.892,41.061909 7.892,41.061909 c 0,0 -0.4956477,-2.859713 -0.6,-4.394774 -0.1043523,-1.535061 -3.009e-4,-4.796081 -3.009e-4,-4.796081 0,0 0.1781227,-4.803838 6.2971959,-8.909054 6.119073,-4.105216 34.000757,-4.009075 39.173544,1.597061 5.172787,5.606136 3.948262,13.035072 3.948262,13.035072 0,0 2.330748,4.361814 8.418589,3.144838 z" style="fill: rgb(255, 255, 255);"></path>
     </svg>
   </div>
-  <div #word class="word">{{ displayedText }}</div>
+  <div #word class="word">{{ displayedText}}</div>
+  <div class="text">Swipe sideways through the illustrations above to learn the word of the day.</div>
   <div class='points'>
-    <div class='point' [ngClass]="{'active': displayedPerson === 1}"></div>
-    <div class='point' [ngClass]="{'active': displayedPerson === 2}"></div>
-    <div class='point' [ngClass]="{'active': displayedPerson === 3}"></div>
+    <div class='point french' [ngClass]="{'active': displayedPerson === 1}"></div>
+    <div class='point english' [ngClass]="{'active': displayedPerson === 2}"></div>
+    <div class='point dutch' [ngClass]="{'active': displayedPerson === 3}"></div>
   </div>  
 </div>
