fix: final style improvement

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -102,7 +102,7 @@
 }
 
 .word {
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'Assistant', sans-serif;
   position: absolute;
   top: 160px;
 }
